--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -24,6 +24,7 @@
     .panels {
       min-height:100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -41,7 +42,13 @@
       font-size: 20px;
       background-size:cover;
       background-position:center;
+      flex: 1;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
     }
+    
 
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -54,6 +61,23 @@
       margin:0;
       width: 100%;
       transition:transform 0.5s;
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .panel > *:first-child {
+      transform: translateY(-100%);
+    }
+    .panel.open-active > *:first-child {
+      transform: translateY(0);
+    }
+    .panel > *:last-child {
+      transform: translateY(100%);
+    }
+    .panel.open-active > *:last-child {
+      transform: translateY(0);
     }
 
     .panel p {
@@ -68,6 +92,7 @@
 
     .panel.open {
       font-size:40px;
+      flex: 5;
     }
 
   </style>
@@ -102,6 +127,21 @@
   </div>
 
   <script>
+
+  const panel = document.querySelectorAll(".panel");
+
+  function enlarge(e) {
+    this.classList.toggle("open");
+  }
+
+  function showText(e) {
+    if (e.propertyName.includes("flex")) {
+      this.classList.toggle("open-active");
+    }
+  }
+
+  panel.forEach(panel => panel.addEventListener("click", enlarge));
+  panel.forEach(panel => panel.addEventListener("transitionend", showText));
 
   </script>
 
