--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -9,12 +9,26 @@
   <script>
     // start with strings, numbers and booleans
 
+    // let age = 100;
+    // let age2 = age;
+    // console.log(age, age2);
+    // age = 200;
+    // console.log(age, age2);
+
+    // let name = 'scott';
+    // let name2 = name;
+    // console.log(name, name2);
+    // name = 'cool';
+    // console.log(name, name2);
+
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+    const team = players;
 
     // You might think we can just do something like this:
+    // team[3] = 'Lux';
 
     // however what happens when we update that array?
 
@@ -26,11 +40,18 @@
 
     // So, how do we fix this? We take a copy instead!
 
+    const team2 = players.slice();
+
     // one way
 
     // or create a new array and concat the old one in
 
+    const team3 = [].concat(players);
+
     // or use the new ES6 Spread
+    
+    team4 = [...players];
+    team5 = Array.from(players);
 
     // now when we update it, the original one isn't changed
 
@@ -44,11 +65,30 @@
 
     // and think we make a copy:
 
+    // const captain = person;
+    // captain.number = 99;
+
     // how do we take a copy instead?
+
+    const captain = Object.assign({}, person, {number: 99, age: 12})
 
     // We will hopefully soon see the object ...spread
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+
+    const scott = {
+      name: 'Wes Bos',
+      age: 80,
+      social: {
+        facebook: 'google.com',
+        twitter: "@scott"
+      }
+    }
+
+    console.clear();
+
+    const dev = Object.assign({}, scott, {name: 'scott'});
+    const dev2 = JSON.parse(JSON.stringify(scott));
 
   </script>
 
