--- a/16 - Mouse Move Shadow/index-start.html
+++ b/16 - Mouse Move Shadow/index-start.html
@@ -35,6 +35,35 @@
   </style>
 
 <script>
+
+  const hero = document.querySelector('.hero');
+  const text = document.querySelector('h1');
+  const walk = 100;
+
+  function changeShadow(e) {
+    const { offsetWidth: width, offsetHeight: height } = hero;
+    let { offsetX: x, offsetY: y } = e;
+
+    if (this !== e.target) {
+      x = x + e.target.offsetLeft;
+      y = y + e.target.offsetTop;
+    }
+
+    const xWalk = Math.round((x / width * walk) - (walk / 2));
+    const yWalk = Math.round((y / width * walk) - (walk / 2))
+
+    text.style.textShadow = `
+      ${xWalk}px ${yWalk}px 10px yellow,
+      ${xWalk * -1}px ${yWalk}px 10px red,
+      ${xWalk * -1}px ${yWalk * -1}px 10px blue,
+      ${xWalk}px ${yWalk *-1}px 10px green
+    `;
+
+
+  }
+
+  hero.addEventListener('mousemove', changeShadow);
+
 </script>
 </body>
 </html>
